✨ 북마크 서비스 및 초기화 로직 리팩토링
- BookmarkInitializationService 분리로 SonarQube S6809 이슈 해결
- `BookmarkController` 및 `WebhookController`의 API 응답 매핑 방식 통일 (`ResponseEntity` 제거)
- GlobalResponseBodyAdvice 적용으로 API 응답 구조 일관성 확보
- `BookmarkService`와 `GitLabService` 메서드 명 수정 (fetch -> retrieve)로 명확한 의미 전달
- `CategoryNode` 클래스 주석 개선 및 기능 설명 추가
- `ApiResponse`와 `GlobalResponseBodyAdvice` 추가로 REST API 응답 표준화
- 스케줄링 간 북마크 데이터 갱신 기능 리팩토링 (`@Scheduled` 로직 분리 및 개선)